fixed height view for home container overflowing

--- a/activities-api/src/Components/Home Page/home.css
+++ b/activities-api/src/Components/Home Page/home.css
@@ -1,7 +1,10 @@
+
 .homeContainer{
+
     border: 1px solid red;
     display: flex;
     height: 100vw;
+    max-height: 800px;
     align-items: center;
     justify-content: center;
     flex-direction: column;
